--- a/december/28-12-2022.md
+++ b/december/28-12-2022.md
@@ -1,4 +1,4 @@
-[1. Sum two numbers]("https://www.jschallenger.com/javascript-practice/javascript-fundamentals/sum-two-numbers-javascript")
+[1. Sum two numbers](https://www.jschallenger.com/javascript-practice/javascript-fundamentals/sum-two-numbers-javascript)
 
 Solution
 
