--- a/december/28-12-2022.md
+++ b/december/28-12-2022.md
@@ -7,3 +7,44 @@ function myFunction(a, b){
     return a + b
 }
 ``` 
+[2. Comparison operators, strict equality](https://www.jschallenger.com/javascript-practice/javascript-fundamentals/comparison-strict-equality)
+
+Solution
+
+```js
+function myFunction(a, b){
+    return a === b
+}
+```
+[3. Get type of value](https://www.jschallenger.com/javascript-practice/javascript-fundamentals/type-value-javascript)
+
+Solution
+
+```js
+
+function myFunction(a){
+    return typeof a
+}
+```
+
+[4.Get nth character of string](https://www.jschallenger.com/javascript-practice/javascript-fundamentals/get-nth-character-string-javascript)
+
+Solution
+
+```js
+
+function myFunction(a,n){
+    return a[n-1]
+}
+```
+
+[5.Remove first n characters of string](https://www.jschallenger.com/javascript-practice/javascript-fundamentals/remove-first-characters-string-javascript)
+
+Solution
+
+```js
+
+function myFunction(a){
+    return a.slice(3)
+}
+```
